0x0B-malloc_free/0-create_array.c:40:12:
r("Memory allocation failed.\n");
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |
      |            char *
In file included from 0-create_array.c:3:
main.h:10:19: note: expected ‘char’ but argument is of type ‘char *’
   10 | int _putchar(char c);
      |              ~~~~~^
0-create_array.c:43:2: error: ‘for’ loop initial declarations are only allowed in C99 or C11 mode
   43 |  for (int i = 0; i < 5; i++)
      |  ^~~
0-create_array.c:43:2: note: use option ‘-std=c99’, ‘-std=gnu99’, ‘-std=c11’ or ‘-std=gnu11’ to compile your code
0-create_array.c:46:11: error: redefinition of ‘i’
   46 |  for (int i = 0; i < 10; i++)
      |           ^
0-create_array.c:43:11: note: previous definition of ‘i’ was here
   43 |  for (int i = 0; i < 5; i++)
      |           ^
0-create_array.c:46:2: error: ‘for’ loop initial declarations are only allowed in C99 or C11 mode
   46 |  for (int i = 0; i < 10; i++)
      |  ^~~
0-create_array.c:49:11: error: redefinition of ‘i’
   49 |  for (int i = 0; i < 0; i++)
      |           ^
0-create_array.c:46:11: note: previous definition of ‘i’ was here
   46 |  for (int i = 0; i < 10; i++)
      |           ^
0-create_array.c:49:2: error: ‘for’ loop initial declarations are only allowed in C99 or C11 mode
   49 |  for (int i = 0; i < 0; i++)
      |  ^~~
